--- a/assets/src/css/admin.css
+++ b/assets/src/css/admin.css
@@ -185,15 +185,23 @@ h1.ka-logo,
 	display: inline-block;
 	padding: 6px 12px;
 }
+.ka-pagination--prev:before,
+.ka-pagination--next:after {
+	line-height: 1;
+	font-size: 16px;
+	vertical-align: top;
+}
+.ka-pagination--prev:before {
+	content: "◀";
+	margin-right: 6px;
+}
+.ka-pagination--next:after {
+	content: "▶";
+	margin-left: 6px;
+	vertical-align: top;
+}
 .ka-pagination--next {
 	float: right;
-}
-.ka-pagination--prev:hover .dashicons,
-.ka-pagination--prev:focus .dashicons,
-.ka-pagination--next:hover .dashicons,
-.ka-pagination--next:focus .dashicons {
-	transform: scale(1.4);
-	transition: transform .2s
 }
 .ka-pagination--prev.disabled,
 .ka-pagination--next.disabled {
@@ -205,13 +213,6 @@ h1.ka-logo,
 .ka-pagination--next.disabled:focus {
 	cursor: initial
 }
-.ka-pagination--prev.disabled:hover .dashicons,
-.ka-pagination--prev.disabled:focus .dashicons,
-.ka-pagination--next.disabled:hover .dashicons,
-.ka-pagination--next.disabled:focus .dashicons {
-	transform: none;
-}
-
 
 /** Totals Component */
 .ka-totals {
@@ -267,8 +268,16 @@ h1.ka-logo,
 	background: white;
 	line-height: 20px;
 }
-.ka-datepicker--label .dashicons {
-	margin-right: 2px;
+.ka-datepicker--label:before {
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect x='0' fill='none' width='20' height='20'/%3E%3Cg%3E%3Cpath d='M15 4h3v15H2V4h3V3c0-.41.15-.76.44-1.06.29-.29.65-.44 1.06-.44s.77.15 1.06.44c.29.3.44.65.44 1.06v1h4V3c0-.41.15-.76.44-1.06.29-.29.65-.44 1.06-.44s.77.15 1.06.44c.29.3.44.65.44 1.06v1zM6 3v2.5c0 .14.05.26.15.36.09.09.21.14.35.14s.26-.05.35-.14c.1-.1.15-.22.15-.36V3c0-.14-.05-.26-.15-.35-.09-.1-.21-.15-.35-.15s-.26.05-.35.15c-.1.09-.15.21-.15.35zm7 0v2.5c0 .14.05.26.14.36.1.09.22.14.36.14s.26-.05.36-.14c.09-.1.14-.22.14-.36V3c0-.14-.05-.26-.14-.35-.1-.1-.22-.15-.36-.15s-.26.05-.36.15c-.09.09-.14.21-.14.35zm4 15V8H3v10h14zM7 9v2H5V9h2zm2 0h2v2H9V9zm4 2V9h2v2h-2zm-6 1v2H5v-2h2zm2 0h2v2H9v-2zm4 2v-2h2v2h-2zm-6 1v2H5v-2h2zm4 2H9v-2h2v2zm4 0h-2v-2h2v2z'/%3E%3C/g%3E%3C/svg%3E");
+	content: "";
+	display: inline-block;
+	line-height: 1;
+	speak: never;
+	width: 20px;
+	height: 20px;
+	vertical-align: top;
+	margin-right: 4px;
 }
 .ka-datepicker--dropdown {
 	background: white;
