--- a/assets/src/css/admin.css
+++ b/assets/src/css/admin.css
@@ -256,6 +256,9 @@ h1.ka-logo,
 .ka-totals--subtext {
 	color: #DDD;
 }
+.ka-totals--subtext-down {
+	display: none;
+}
 .ka-up .ka-totals--subtext-up,
 .ka-down .ka-totals--subtext-down {
 	display: inline;
