--- a/assets/src/css/dashboard.css
+++ b/assets/src/css/dashboard.css
@@ -118,8 +118,7 @@ h1.ka-logo,
   display: block;
   flex: 1;
 }
-.ka-chart--tooltip-content.ka--pageviews,
-.ka-chart--tooltip-content.ka--visitors {
+.ka-chart--tooltip-content {
   border-top: 3px solid transparent;
 }
 .ka-chart--tooltip-amount {
@@ -136,14 +135,13 @@ h1.ka-logo,
   border-right: 6px solid transparent;
   border-top: 6px solid rgba(46, 54, 63, 0.96);
 }
-
 .ka--pageviews {
-  border-top-color: #e14d43 !important;
-  fill: #e14d43;
+  border-top-color: #72aee6;
+  fill: #72aee6;
 }
 .ka--visitors {
-  border-top-color: #b43d35 !important;
-  fill: #b43d35;
+  border-top-color: #2271b1;
+  fill: #2271b1;
 }
 
 /** Dashboard */
