refactor dashboard widget into class of its own. add filter to modify number of top items , defaults to 5. set to 0 to disable.

--- a/assets/src/css/dashboard.css
+++ b/assets/src/css/dashboard.css
@@ -69,10 +69,10 @@ h1.ka-logo,
   margin: 12px 0;
 }
 .ka-margin-m {
-  margin: 24px 0;
+  margin: 2em 0;
 }
 .ka-margin-l {
-  margin: 48px 0;
+  margin: 4em 0;
 }
 .ka-right {
   float: right;
