--- a/assets/src/css/dashboard.css
+++ b/assets/src/css/dashboard.css
@@ -417,14 +417,30 @@ a.ka-datepicker--quicknav-next {
   display: inline-block;
 }
 
-@keyframes koko-fadein {
-  from {
-    opacity: 0
-  }
-  to {
-    opacity: 1
-  }
+/* export button */
+.ka-export {
+  cursor: pointer;
+  padding: 6px;
+  border: 1px solid #DDD;
+  border-radius: 6px;
+  display: inline-block;
+  background: white;
+  line-height: 20px;
+  color: inherit;
 }
+
+.ka-export:before {
+  content: "";
+  display: inline-block;
+  line-height: 1;
+  speak: never;
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+  vertical-align: middle;
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-download' viewBox='0 0 16 16'%3E%3Cpath d='M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5'/%3E%3Cpath d='M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z'/%3E%3C/svg%3E");
+}
+
 
 @view-transition {
  navigation: auto;
