clean up css a bit and improve mobile view for top nav

--- a/assets/src/css/dashboard.css
+++ b/assets/src/css/dashboard.css
@@ -72,9 +72,32 @@ h1.ka-logo,
   float: left;
   visibility: visible;
 }
-.ka-admin-nav {
-  line-height: 34px;
-  margin-left: auto;
+
+.ka-dashboard-nav {
+  display: flex;
+  gap: 12px;
+  flex-direction: column-reverse;
+  align-items: flex-start;
+}
+.ka-dashboard-nav--left {
+  display: flex;
+  gap: 12px;
+}
+@media (min-width: 840px) {
+  .ka-dashboard-nav {
+    flex-direction: row;
+  }
+  .ka-dashboard-nav nav {
+    margin-left: auto;
+  }
+}
+.ka-dashboard-nav ul {
+  list-style: none;
+  margin: 0;
+}
+.ka-dashboard-nav li {
+    line-height: 34px;
+  display: inline-block;
 }
 .ka-admin-container {
   max-width: 720px;
@@ -92,18 +115,7 @@ h1.ka-logo,
 .ka-admin-nav--link.last {
   margin-right: 0;
 }
-.ka-margin-s {
-  margin: 1em 0;
-}
-.ka-margin-m {
-  margin: 2em 0;
-}
-.ka-margin-l {
-  margin: 4em 0;
-}
-.ka-right {
-  float: right;
-}
+
 .ka-settings--label {
   display: block;
   font-weight: bold;
@@ -183,10 +195,11 @@ h1.ka-logo,
 /** Page filter */
 .ka-page-filter {
   border: 1px solid #DDD;
-  padding: 6px;
   background: hsl(205.2, 100%, 93.9%);
   border-radius: 6px;
-  display: none;
+  line-height: 20px;
+  display: inline-block;
+  padding: 6px;
 }
 .ka-page-filter--close {
   text-decoration: none;
@@ -222,12 +235,9 @@ h1.ka-logo,
 .ka-table th:last-of-type {
   border-radius: 0 4px 0 0;
 }
-.ka-table th,
-.ka-table td {
-  border-top: 1px solid #efefef;
-}
 .ka-table td,
 .ka-table th {
+  border-top: 1px solid #efefef;
   text-align: right;
   padding: 6px 8px;
   text-overflow: ellipsis;
@@ -315,11 +325,14 @@ h1.ka-logo,
 .ka-datepicker--label {
   cursor: pointer;
   padding: 6px;
-  border: 1px solid #DDD;
+  border: 1px solid #ddd;
   border-radius: 6px;
   display: inline-block;
   background: white;
   line-height: 20px;
+}
+.ka-datepicker--label:hover {
+  background: #eee;
 }
 .ka-datepicker--label:before {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect x='0' fill='none' width='20' height='20'/%3E%3Cg%3E%3Cpath d='M15 4h3v15H2V4h3V3c0-.41.15-.76.44-1.06.29-.29.65-.44 1.06-.44s.77.15 1.06.44c.29.3.44.65.44 1.06v1h4V3c0-.41.15-.76.44-1.06.29-.29.65-.44 1.06-.44s.77.15 1.06.44c.29.3.44.65.44 1.06v1zM6 3v2.5c0 .14.05.26.15.36.09.09.21.14.35.14s.26-.05.35-.14c.1-.1.15-.22.15-.36V3c0-.14-.05-.26-.15-.35-.09-.1-.21-.15-.35-.15s-.26.05-.35.15c-.1.09-.15.21-.15.35zm7 0v2.5c0 .14.05.26.14.36.1.09.22.14.36.14s.26-.05.36-.14c.09-.1.14-.22.14-.36V3c0-.14-.05-.26-.14-.35-.1-.1-.22-.15-.36-.15s-.26.05-.36.15c-.09.09-.14.21-.14.35zm4 15V8H3v10h14zM7 9v2H5V9h2zm2 0h2v2H9V9zm4 2V9h2v2h-2zm-6 1v2H5v-2h2zm2 0h2v2H9v-2zm4 2v-2h2v2h-2zm-6 1v2H5v-2h2zm4 2H9v-2h2v2zm4 0h-2v-2h2v2z'/%3E%3C/g%3E%3C/svg%3E");
@@ -404,9 +417,7 @@ a.ka-datepicker--quicknav-next {
     grid-column: span 3;
   }
 }
-.ka-box:empty {
-  display: none;
-}
+
 .ka-ul li {
   text-overflow: ellipsis;
   overflow: hidden;
@@ -416,17 +427,32 @@ a.ka-datepicker--quicknav-next {
   min-width: 24px;
   display: inline-block;
 }
+.ka-margin-s {
+  margin: 1em 0;
+}
+.ka-margin-m {
+  margin: 2em 0;
+}
+.ka-margin-l {
+  margin: 4em 0;
+}
+.ka-right {
+  float: right;
+}
 
 /* export button */
 .ka-export {
   cursor: pointer;
   padding: 6px;
-  border: 1px solid #DDD;
+  border: 1px solid #ddd;
   border-radius: 6px;
   display: inline-block;
   background: white;
   line-height: 20px;
   color: inherit;
+}
+.ka-export:hover {
+  background: #eee;
 }
 
 .ka-export:before {
