--- a/assets/src/css/dashboard.css
+++ b/assets/src/css/dashboard.css
@@ -80,7 +80,7 @@ h1.ka-logo,
   font-size: 14px;
 }
 .ka-admin-main p { font-size: 14px; }
-
+.ka-admin-main h3 { font-size: 16px; }
 .ka-admin-sidebar > div {
   margin-top: 4em;
 }
