darken weekend color a bit more

--- a/assets/src/css/dashboard.css
+++ b/assets/src/css/dashboard.css
@@ -185,7 +185,7 @@ h1.ka-logo,
   fill: #72aee6;
 }
 .weekend .ka--pageviews {
-  fill: #4695de;
+  fill: #2984d9;
 }
 
 .ka--visitors {
@@ -193,7 +193,7 @@ h1.ka-logo,
   fill: #2271b1;
 }
 .weekend .ka--visitors {
-  fill: #1d6096;
+  fill: #195585;
 }
 
 /** Dashboard */
